new 短信发送服务

--- a/service-sms/pom.xml
+++ b/service-sms/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.javaniuniu</groupId>
-    <artifactId>eureka-service</artifactId>
+    <artifactId>service-sms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-service</name>
-    <description>eureka服务</description>
+    <name>service-sms</name>
+    <description>短信发送服务</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,8 +21,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
         <dependency>
