--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>api-passenger</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>api-passenger</name>
-    <description>Demo project for Spring Boot</description>
+    <description>乘客端api服务</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -20,6 +20,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
