1. eureka-server 2. eureka中的核心参数 3. zuul-server 4. 分布式事务 5. 接口设计规范 6. 微服务项目结构
1. eureka-server
2. eureka中的核心参数
3. zuul-server
4. 分布式事务
5. 接口设计规范
6. 微服务项目结构

--- a/cloud-zuul/pom.xml
+++ b/cloud-zuul/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.javaniuniu</groupId>
-    <artifactId>eureka-service</artifactId>
+    <artifactId>cloud-zuul</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-service</name>
-    <description>eureka服务</description>
+    <name>cloud-zuul</name>
+    <description>接口统一网关</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,8 +21,27 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.javaniuniu</groupId>
+            <artifactId>internal-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
